[package]
name = "temporal-scheduler"
version = "0.1.0"
edition = "2021"
description = "Temporal Schedule Spec engine — Rust rewrite of service/worker/scheduler spec logic"

[dependencies]
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
farmhash = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
moka = { version = "0.12", features = ["sync"] }



[dev-dependencies]
